# api/oas-doc.yaml
@@ -57,6 +57,48 @@ paths:
               schema:
                 $ref: '#/components/schemas/MessageResponse'  
       
+    get:
+      tags:
+        - Application Server
+      summary: List resolved locations recently sent by the Location Solver
+      description: This endpoint lists the latest resolved locations sent by ThingPark Location Solver.
+      x-swagger-router-controller: appServer
+      operationId: listResolvedLocations
+      parameters:
+        - name: deviceEUI
+          description: Use this parameter to filter out one device with a specific DevEUI.
+          in: query
+          schema:
+            type: string
+      responses:
+        '200':
+          description: \[200 OK\] The list has been retreived
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/LsResolvedLocation"
+        '400':
+          description: \[400 Bad Request\] Invalid parameters supplied.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageResponse'
+        '403':
+          description: \[403 Forbidden\] Authentication error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageResponse'
+        '500':
+          description: \[500 Internal Server Error\] The server encountered an unexpected
+            condition which prevented it from fulfilling the request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageResponse'  
+
   /uplink_actility:
     post:
       tags:
@@ -821,7 +863,7 @@ components:
         ts: 
           description: server timestamp as number (miliseconds from Linux epoch)
           type: integer
-          example: 1
+          example: 1555847833236
         ack: 
           description: NEW! acknowledgement flag as set by device
           type: boolean
@@ -829,11 +871,11 @@ components:
         fcnt: 
           description: frame counter, a 32-bit number
           type: integer
-          example: 17
+          example: 118
         port: 
           description: port as sent by the end device
           type: integer
-          example: 1554027678278
+          example: 17
         encdata: 
           description: data payload (APPSKEY encrypted hex string) only present if APPSKEY is assigned to device
           type: string
